Changes for 1.5:

 - [DEV-118] added dashboard screen to monitoring (Artem)
 - [DEV-117] support of data buffering on agent side (Alexei)
 - [DEV-115] enhanced sender to use only one TCP connection (Alexei)
 - [DEV-112] added themes option in frontend (Artem)
 - [DEV-114] special processing of simple SNMP OIDs like ifDescr, ifInOctets, etc (Alexei)
 - [DEV-114] monitoring of SNMP objects having flexible Index (Alexei)
 - [DEV-104] added maintenance mode (Artem)
 - [DEV-103] added support of disabling login rights for a users group (Artem)
 - [DEV-102] added support of UTF8 for GUI (Artem)
 - [DEV-97] added screen for easier creation of locales (Artem)
 - [DEV-96] added availability to disable default user "guest" (Artem)
 - [DEV-95] added group status enabled/disabled (Artem)
 - [DEV-94] added processing of the "database down" event (Artem)
 - [DEV-93] added availability to select all hosts in specified group in "Monitoring" section (Artem)
 - [DEV-91] added printable view for pages (Artem)
 - [DEV-89] improved trigger tables view (Artem)
 - [DEV-88] removed duplicated entry "Login" (Artem)
 - [DEV-87] fixed problem with unlinking templates (Sasha)
 - [DEV-52] added "Unlimited number of link styles for maps" (Artem)
 - [DEV-86] DM: Synchronizing all history data with master node (Sasha)
 - bulk acknowledge with empty comment (Sasha)
 - performance improvement of processing events in frontend (Artem)
 - [DEV-66] added sorting to screens (Artem)
 - The last character for last value is unreadable (Sasha)
 - [DEV-60] added availability of setting hosts view style in overview (Artem)
 - [DEV-53] added different style for dependent triggers in "Status of triggers" (Artem)
 - [DEV-62] added availability to select all hosts in "Availability report" (Artem)
 - [DEV-75] Empty command result window (Sasha)
 - [DEV-74] Scripts of all nodes are displayed (Sasha)
 - [DEV-54] added zoom for graphs (Artem)